// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Loading should match snapshot 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "backgroundColor": "#F7F9FC",
      "flex": 1,
      "justifyContent": "center",
    }
  }
>
  <ActivityIndicator
    color="#FF6B35"
    size="large"
  />
  <Text
    style={
      [
        {
          "textAlign": "left",
        },
        {
          "color": "rgba(28, 27, 31, 1)",
          "fontFamily": "System",
          "fontWeight": "400",
          "letterSpacing": 0,
        },
        {
          "writingDirection": "ltr",
        },
        {
          "color": "#1A1A1A",
          "marginTop": 16,
        },
      ]
    }
  >
    Loading...
  </Text>
</View>
`;

exports[`Loading should match snapshot with custom message 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "backgroundColor": "#F7F9FC",
      "flex": 1,
      "justifyContent": "center",
    }
  }
>
  <ActivityIndicator
    color="#FF6B35"
    size="large"
  />
  <Text
    style={
      [
        {
          "textAlign": "left",
        },
        {
          "color": "rgba(28, 27, 31, 1)",
          "fontFamily": "System",
          "fontWeight": "400",
          "letterSpacing": 0,
        },
        {
          "writingDirection": "ltr",
        },
        {
          "color": "#1A1A1A",
          "marginTop": 16,
        },
      ]
    }
  >
    Custom loading message
  </Text>
</View>
`;
